[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/PatternSelectControl.gd" type="Script" id=1]

[node name="PatternSelectControl" type="CenterContainer"]
anchor_right = 0.089
anchor_bottom = 0.065
margin_top = 1.0
margin_right = -0.136002
margin_bottom = -3.8147e-06
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 91.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="VBoxContainer"]
margin_right = 91.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "??????"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 91.0
margin_bottom = 38.0
alignment = 1

[node name="GuideButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
text = "GUIDE"

[node name="SetButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 58.0
margin_right = 91.0
margin_bottom = 20.0
text = "SET"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/GuideButton" to="." method="_on_GuideButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/GuideButton" to="." method="_on_GuideButton_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SetButton" to="." method="_on_SetButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/SetButton" to="." method="_on_SetButton_toggled"]
